@@ -107,7 +107,6 @@ do_rewrite_widget_uri(pool_t pool,
 
     uri = widget_external_uri(pool, external_uri, args,
                               widget,
-                              mode == URI_MODE_FOCUS || value != NULL,
                               value,
                               frame, raw);
     if (mode == URI_MODE_PARTITION && partition_domain != NULL)
